# docker-django-template

app/: Dockerfile  entrypoint.sh  start-dev-server.sh
app/app/: settings.py
app/requirements/: pyproject.toml
