[tool.poetry]
name = "Docker-Django server"
version = "0.1.0"
description = "Poetry generates requirements.txt from pyproject.toml into a docker container and pip installs them."
authors = ["Sun Choi <best2378@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ccxt = "^3.0.56"
pandas = "^2.0.0"
numpy = "^1.24.2"
pillow = "^9.5.0"
dash = "^2.9.2"
django = "^4.2"
requests = "^2.28.2"
psycopg = "^3.1.8"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Dependency groups are supported for organizing your dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.2.0"
notebook = "^6.5.4"
flask = "^2.2.3"


# ...and can be installed only when explicitly requested
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"

# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
my-script = "my_package:main"